@@ -665,8 +665,10 @@ local({
     bdy <- body(as.data.frame.vector)
     bdy <- bdy[c(1:2, seq_along(bdy)[-1L])] # taking [(1,2,2:n)] to insert at [2]:
     ## deprecation warning only when not called by method dispatch from as.data.frame():
-    bdy[[2L]] <- quote(if((sys.nframe() <= 1L || sys.call(-1L)[[1L]] != quote(as.data.frame)) &&
-                          nzchar(Sys.getenv("_R_CHECK_AS_DATA_FRAME_EXPLICIT_METHOD_")))
+    bdy[[2L]] <- quote(if((sys.nframe() <= 1L ||
+                           ((c1 <- sys.call(-1L)[[1L]]) != quote(as.data.frame) &&
+                           !(c1 == quote(FUN) && (c2 <- sys.call(-2L)[[1L]]) == quote(lapply))) # lapply(list(pi, 1L), as.data.frame)
+                          ) && nzchar(Sys.getenv("_R_CHECK_AS_DATA_FRAME_EXPLICIT_METHOD_")))
 	.Deprecated(
 	    msg = gettextf(
 		"Direct call of '%s()' is deprecated.  Use '%s()' or '%s()' instead",
